Updated cclients and Scripts to work together