@@ -5,14 +5,15 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
 import java.net.Socket;
+import java.util.Scanner;
 import java.util.concurrent.TimeUnit;
 
 public class Client1 {
 
 	public static void main(String[] args) throws IOException {
-		//runSerachScript();
+		runLoginScript("127.0.0.1");
 		//runClient();
-		runCheckScript();
+		//runCheckScript();
 	}
 	public static void runClient() throws IOException {
 		
@@ -24,15 +25,18 @@ public class Client1 {
 		//runSerachScript();
 
 		try {
+			System.out.println("What is Server ip ");
+			Scanner input = new Scanner(System.in);
+			String ip = input.nextLine();
 
-			client = new Socket("localhost", 1300);
+			client = new Socket(ip, 1300);
 			from_server = new BufferedReader(new InputStreamReader(client.getInputStream()));
 			to_server = new PrintWriter(client.getOutputStream());
 
 			System.out.println("Connected with server " + client.getInetAddress() + ":" + client.getPort());
 
-			runLoginScript();
-			runCheckScript();
+			runLoginScript(ip);
+			runCheckScript(ip);
 			
 
 			while (true) {
@@ -75,9 +79,12 @@ public class Client1 {
 
 	}
 
-	private static void runLoginScript() {
+	private static void runLoginScript(String ip) {
 		try {
-			Process pro = Runtime.getRuntime().exec("scripts/login.sh" );
+			ProcessBuilder pbuilder = new ProcessBuilder("./scripts/login.sh",ip);
+			pbuilder.inheritIO();
+
+			Process pro = pbuilder.start();
 			BufferedReader search_output = new BufferedReader(new InputStreamReader(pro.getInputStream()));
 			String line = search_output.readLine();
 
@@ -104,7 +111,7 @@ public class Client1 {
 		}
 	}
 
-	private static void runCheckScript() {
+	private static void runCheckScript(String ip) {
 		try {
 			ProcessBuilder pb = new ProcessBuilder("scripts/Check.sh");
 			pb.redirectErrorStream(true);
